# xdd

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml  testbuild-frontend.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: account.rs  alias.rs  auth.rs  error.rs  lib.rs  main.rs  user.rs  util.rs
frontend/: README.md  index.html  package-lock.json  package.json  todo.md  tsconfig.json
frontend/src/: App.vue  main.ts  v-valid.ts
frontend/src/components/alias/: AliasInline.vue  AliasModal.vue  AliasNormal.vue
frontend/src/components/form/: InputCheckbox.vue  InputSelect.vue  InputText.vue  InputTextarea.vue
frontend/src/components/generic/: Dropdown.vue  Spinner.vue
frontend/src/components/navigation/: Navigation.vue
frontend/src/js/: config.ts  definitions.ts  fetch.ts  rules.ts  utils.ts
frontend/src/router/: index.ts
frontend/src/router/guards/: afterEach.ts  beforeResolve.ts
frontend/src/router/views/: RouteAuthorize.vue  RouteCreate.vue  RouteHome.vue  RouteSignOut.vue
frontend/src/store/: alias.ts  emotes.ts  loading.ts  user.ts
frontend/src/style/: index.scss
frontend/src/style/app/: index.scss
frontend/src/style/app/create/: _form.scss
frontend/src/style/generic/: _animation.scss  _dropdown.scss  _layout.scss  _toast.scss  _tooltip.scss  index.scss
frontend/src/style/overrides/: index.scss  theme.scss
frontend/src/style/setup/: _variables.scss
frontend/src/types/: Alias.ts  AliasType.ts  PostAlias.ts  PutAlias.ts  PutSettings.ts  Settings.ts  User.ts  global.d.ts
(+12 files in other folders)
