[package]
name = "xdd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
axum = { version = "0.6.4", features = ["multipart", "query", "headers"] }
tokio = { version = "1.24.2", features = ["fs", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_rusqlite = "0.31.0"
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
time = { version = "0.3.17", features = ["parsing"] }
idlib = { "git" = "https://github.com/Mavulp/hiveID" }
futures = "0.3.25"
utoipa = { version = "3.0.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
itertools = "0.10.5"

[dependencies.rusqlite_migration]
git = "https://github.com/cljoly/rusqlite_migration"
